# chorus

./: .clippy.toml  .gitignore  Cargo.toml  Cargo.toml.bak  LICENSE  Makefile  README.md  REVIEW-R1R2R3-FULL.md  tarpaulin-report.html
.github/workflows/: ci.yml  ci.yml.bak
benches/: crypto_bench.rs  multi_node_sim.rs  protocol_bench.rs
docs/: E2EE-ACCEPTANCE.md
examples/: agent_chat.rs  agent_task.rs  chorus_tui.rs  cross_machine_test.rs  encrypted_chat.rs  gateway_demo.rs  headless_demo.rs  headless_sender.rs  p2p_basic.rs  sdk_openclaw_agent.rs  tui_demo.rs  walkie_tui.rs
outbox/: ARCHITECTURE-REVIEW-jingyu-20260413.md  FIX-AD-SIGNATURE-CHAIN-jingyu-20260413.md  PHASE4-TRUST-ARCHITECTURE-jingyu-20260413.md  SECURITY-AUDIT-Phase4-heimdall-20260413.md  SECURITY-AUDIT-Phase4.1-heimdall-20260413.md  SECURITY-AUDIT-heimdall-20260413.md  v4-platform-architecture.md
src/: lib.rs
src/crypto/: mod.rs  receipt_signing.rs
src/economy/: crp_accumulator.rs  mod.rs  payment.rs  wc_ledger.rs
src/ffi/: mod.rs  node.rs
src/gateway/: mod.rs  mod.rs.bak
src/identity/: mod.rs
src/p2p/: behaviour.rs  config.rs  direct.rs  envelope.rs  event.rs  handler.rs  mod.rs  network.rs
src/protocol/: mod.rs
src/ratelimit/: mod.rs
src/registry/: mod.rs
src/resource/: backoff.rs  economy_params.rs  engine.rs  match_engine.rs  mod.rs  proof.rs  session.rs  table.rs  types.rs
src/tenant/: mod.rs
src/trust/: endorsement.rs  guarantor.rs  mod.rs  peer_binding.rs  rate_limit.rs  reputation.rs  slash.rs  types.rs
src/tui/: mod.rs
tests/: integration_p2p.rs  integration_realworld.rs  integration_resource.rs
tests/cross_machine/: README.md  run_cross_machine_test.sh  run_test.sh
