[package]
name = "walkie-talkie-core"
version = "0.2.0"
edition = "2021"

[features]
default = []
napi-binding = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
libp2p = { version = "0.54", features = [
    "tcp", "tokio", "noise", "yamux", "macros",
    "identify", "ping", "gossipsub", "mdns",
] }
tokio = { version = "1", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
napi = { version = "2", features = ["async"], optional = true }
napi-derive = { version = "2", optional = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
axum = "0.7"
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[[example]]
name = "walkie_tui"
required-features = ["tui"]

[[example]]
name = "headless_demo"
required-features = ["tui"]

[[example]]
name = "tui_demo"
required-features = ["tui"]

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "sdk_openclaw_agent"

