[package]
name = "chorus-core"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "E2EE P2P agent mesh — crypto, identity, structured messaging"
repository = "https://github.com/LyonMask/chorus"

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
libp2p = { version = "0.54", features = [
    "tcp", "tokio", "noise", "yamux", "macros",
    "identify", "ping", "gossipsub", "mdns",
    "request-response",
    "relay", "dcutr",
] }
tokio = { version = "1", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
hostname = "0.4"
thiserror = "1.0"
anyhow = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }
secrecy = "0.10"
async-trait = "0.1"
zeroize = { version = "1", features = ["derive"] }

[[bin]]
name = "chorus"
path = "src/bin/chorus.rs"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "chorus_tui"
required-features = ["tui"]

[[example]]
name = "tui_demo"
required-features = ["tui"]
